--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ title_separator          : "-"
 name                     : &name "Purvanshi Singh"
 description              : &description "personal description"
 url                      : https://purvanshi-singh.github.io/personal-website.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl                  : "" # the subpath of your site, e.g. "/blog"
+baseurl                  : "https://purvanshi-singh.github.io/personal-website.github.io/" # the subpath of your site, e.g. "/blog"
 repository               : "purvanshi-singh/personal-website.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
