--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Purvanshi's Homepage"
 title_separator          : "-"
 name                     : &name "Purvanshi Singh"
 description              : &description "personal description"
-url                      : https://purvanshi-singh.github.io/personal-website.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "https://purvanshi-singh.github.io/personal-website.github.io"# the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "purvanshi-singh/personal-website.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
